Revision history for Math-BigNum

0.17    2017-xx-xx

        [ADDED]

        - Added the method isqrtrem(n), which returns the integer square root and the remainder.
        - Added the method irootrem(n), which returns the integer nth root and the remainder.

0.16    2016-12-11

        [ADDED]

        - Added two methods for computing the nth-Harmonic number:

            + harmfrac(n)
            + harmreal(n)

        - Added two methods for reseeding the pseudorandom number generator:

            + seed(n)
            + iseed(n)

        [IMPROVEMENTS]

        - Extended the method digits() to accept an optional base.

            + digits(4095, 16)  #=> ('f', 'f', 'f')

        [BUG FIXES]

        - Using threads in some parts of the program, will no longer cause a segmentation fault.

        However, Math::BigNum is not thread-safe, therefore using Math::BigNum objects inside threads, still causes a segmentation fault.

0.15    2016-10-24

        [ADDED]

        - Unimport support.

            no Math::BigNum;     # disables the `:constant` behavior in the current scope

        - Added the `new_int()` and `new_uint()` methods for setting signed and unsigned native integers.

        [PERFORMANCE IMPROVEMENTS]

        - Noticeable optimizations in method `is_pow`. (Thanks to Dana Jacobsen)
        - Minor optimization in `bernfrac()` for values of n < 50.
        - Faster algorithm in `bernfrac()` for values of `n` >= 50. (based on the Zeta function)
        - Faster algorithm in `bernreal()`, using positive values of the Zeta function. (before, negative values were used)

        [BUG FIXES]

        - When a base is specified, special values, such "Inf" and "NaN", are no longer parsed specially.

            + Math::BigNum->new('inf', 36) == 24171
            + Math::BigNum->new('nan', 36) == 30191

        [OTHER]

        - Documentation improvements.

0.14    2016-10-07