@@ -6,6 +6,7 @@ Revision history for Math-BigNum
 
         - Added the method isqrtrem(n), which returns the integer square root and the remainder.
         - Added the method irootrem(n), which returns the integer nth root and the remainder.
+        - Added the method eta(n), which returns the result of the Dirichlet eta function at n.
 
 0.16    2016-12-11
 
